2002-07-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-image-viewer): New option.
	(w3m-content-type-alist): Refer it.

	* shimbun/sb-f1fan.el (shimbun-make-contents): Call
	`shimbun-header-insert-and-buffer-string' to insert <base> tag.

	* shimbun/sb-vinelinux.el (shimbun-make-contents): Insert <html>,
	<head>, <base> and <body> tag.

	* shimbun/sb-ruby.el (shimbun-make-contents): Insert <base> tag.

	* shimbun/sb-pcweb-column.el (shimbun-make-contents): Call
	`shimbun-header-insert-and-buffer-string' to insert <base> tag.

	* shimbun/sb-ibm-dev.el (shimbun-make-contents): Call
	`shimbun-header-insert-and-buffer-string' to insert <base> tag.

	* shimbun/sb-wired.el (shimbun-wired-content-start): Update.
	(shimbun-wired-content-end): Update.

2002-07-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-decoder-alist): Don't examine the existence of w3m
	command when compiling.
	(w3m-dirlist-cgi-program): Ditto.

2002-07-09  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-mailarc.el (shimbun-make-contents): Insert <base> tag.

	* shimbun/sb-mhonarc.el (shimbun-make-contents): Insert <base> tag.

2002-07-09  Hironori FUJII  <fujii@chi.its.hiroshima-cu.ac.jp>

	* w3m.el (w3m-highlight-current-anchor): Don't infloop at the
	beginning of a buffer.

2002-07-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-fml.el (shimbun-make-contents): Insert <base> tag.

	* shimbun/sb-kantei.el (shimbun-make-contents): Insert <base> tag.

	* shimbun/sb-mailman.el (shimbun-mailman-make-contents): Use
	`shimbun-header-insert-and-buffer-string'.

	* shimbun/sb-text.el (shimbun-make-contents): Use
	`shimbun-header-insert-and-buffer-string'.

	* shimbun/shimbun.el (shimbun-header-insert-and-buffer-string):
	New function.

	* w3m-perldoc.el (w3m-about-perldoc): Install workaround to
	specify the place in which pod2html generates its cache files.
	Adjust links pointing other perldocs.

2002-07-08  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>
